# Traffic-Sign-Recognition-for-Autonomous-Cars

./: .travis.yml  CMakeLists.txt  README.md  package.xml
docs/: doxy
docs/html/: annotated.html  classclassifier-members.html  classclassifier.html  classes.html  classifier_8cpp.html  classifier_8cpp__incl.map  classifier_8cpp__incl.md5  classifier_8hpp.html  classifier_8hpp__dep__incl.map  classifier_8hpp__dep__incl.md5  classifier_8hpp__incl.map  classifier_8hpp__incl.md5  classifier_8hpp_source.html  classrobot-members.html  classrobot.html  classtestclass-members.html  classtestclass.html  dir_000001_000000.html  dir_000002_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  navig__node_8cpp.html  navig__node_8cpp__incl.map  navig__node_8cpp__incl.md5  robot_8cpp.html  robot_8cpp__incl.map  robot_8cpp__incl.md5  robot_8hpp.html  (+26 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_2.js  functions_5.js  functions_7.js  functions_8.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
docs/latex/: annotated.tex  classclassifier.tex  classifier_8cpp.tex  classifier_8cpp__incl.md5  classifier_8hpp.tex  classifier_8hpp__dep__incl.md5  classifier_8hpp__incl.md5  classrobot.tex  classtestclass.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  navig__node_8cpp.tex  navig__node_8cpp__incl.md5  refman.tex  robot_8cpp.tex  robot_8cpp__incl.md5  robot_8hpp.tex  robot_8hpp__dep__incl.md5  robot_8hpp__incl.md5  test__robot_8cpp.tex  test__robot_8cpp__incl.md5  test__ros_8cpp.tex  test__ros_8cpp__incl.md5  test__vision_8cpp.tex  test__vision_8cpp__incl.md5  testclass_8cpp.tex  testclass_8cpp__incl.md5  testclass_8hpp.tex  testclass_8hpp__dep__incl.md5  testclass_8hpp__incl.md5  vision__node_8cpp.tex  vision__node_8cpp__incl.md5
include/: classifier.hpp  robot.hpp
launch/: custom_kobuki.launch.xml  demo.launch  gazebo.launch
msg/: sign.msg
results/: cppcheck_results.txt  cpplint_results.txt
src/: classifier.cpp  navig_node.cpp  robot.cpp  vision_node.cpp
test/: test_robot.cpp  test_robot.launch  test_ros.cpp  test_ros.launch  test_vision.cpp  test_vision.launch  testclass.cpp  testclass.hpp
world/: signs_world.sdf
